@@ -1,4 +1,6 @@
 4.7.1:
+  * Workaround a problem with un-initialized threads with the
+    replication callback.
   * Get rid of Berkeley DB 3.3 support. Rationale:
     http://mailman.argo.es/pipermail/pybsddb/2008-March/000019.html
   * Better integration between Python test framework and bsddb3.
